--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.5.4'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.707'
 }
 
 tasks.named('test') {
