--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.5.4'
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.707'
+	implementation 'chat.giga:gigachat-java:0.1.4'
 }
 
 tasks.named('test') {
